--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
 						<h1 class="intro-lead">Promoting the Arts in Ireland</h1>
-						<p class="">Explore<a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a></p>
+						<p class="">Explore the blogs <a href="https://rachelblog.github.io/right-sidebar.html" target="_blank"> in full</a></p>
 					</div>
 				</div>
 			</div>
