--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
 						<div id="fh5co-navbar" class="navbar-collapse collapse">
 							<ul class="nav navbar-nav navbar-right">
 								<li class="active"><a href="index.html"><span>Home <span class="border"></span></span></a></li>
-								<li><a href="right-sidebar.html"><span>Right Sidebar <span class="border"></span></span></a></li>
-								<li><a href="left-sidebar.html"><span>Left Sidebar <span class="border"></span></span></a></li>
+								<li><a href="right-sidebar.html"><span>About <span class="border"></span></span></a></li>
+								<li><a href="left-sidebar.html"><span>Contact<span class="border"></span></span></a></li>
+								<li><a href="left-sidebar.html"><span>Latest Post<span class="border"></span></span></a></li>
 							</ul>
 						</div>
 					</div>
@@ -93,7 +94,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
-						<h1 class="intro-lead">Promoting the Arts in Ireland</h1>
+						<h1 class="intro-lead">Exploring & Promoting Art</h1>
 						<p class="">Explore the blogs <a href="https://rachelblog.github.io/right-sidebar.html" target="_blank"> in full</a></p>
 					</div>
 				</div>
