--- a/index.html
+++ b/index.html
@@ -71,14 +71,15 @@
 						<div class="navbar-header"> 
 						<!-- Mobile Toggle Menu Button -->
 						<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle visible-xs-block" data-toggle="collapse" data-target="#fh5co-navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
-						<a class="navbar-brand" href="index.html">Rachel</a>
+						<a class="navbar-brand" href="index.html">Rachel Owens</a>
 						</div>
 						<div id="fh5co-navbar" class="navbar-collapse collapse">
 							<ul class="nav navbar-nav navbar-right">
 								<li class="active"><a href="index.html"><span>Home <span class="border"></span></span></a></li>
 								<li><a href="right-sidebar.html"><span>About <span class="border"></span></span></a></li>
 								<li><a href="left-sidebar.html"><span>Contact<span class="border"></span></span></a></li>
-								<li><a href="left-sidebar.html"><span>Latest Post<span class="border"></span></span></a></li>
+								<li><a href="left-sidebar.html"><span>Writing<span class="border"></span></span></a></li>
+								
 							</ul>
 						</div>
 					</div>
@@ -95,7 +96,7 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
 						<h1 class="intro-lead">Exploring & Promoting Art</h1>
-						<p class="">Explore the blogs <a href="https://rachelblog.github.io/right-sidebar.html" target="_blank"> in full</a></p>
+						<p class="">Read my articles and blog<a href="https://rachelblog.github.io/right-sidebar.html" target="_blank"> in full</a></p>
 					</div>
 				</div>
 			</div>
