--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 						<div id="fh5co-navbar" class="navbar-collapse collapse">
 							<ul class="nav navbar-nav navbar-right">
 								<li class="active"><a href="index.html"><span>Home <span class="border"></span></span></a></li>
-								<li><a href="right-sidebar.html"><span>About <span class="border"></span></span></a></li>
-								<li><a href="left-sidebar.html"><span>Contact<span class="border"></span></span></a></li>
-								<li><a href="left-sidebar.html"><span>Writing<span class="border"></span></span></a></li>
+								<li><a href="about.html"><span>About <span class="border"></span></span></a></li>
+								<li><a href="contact.html"><span>Contact<span class="border"></span></span></a></li>
+								<li><a href="Writing.html"><span>Writing<span class="border"></span></span></a></li>
 								
 							</ul>
 						</div>
@@ -96,7 +96,7 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
 						<h1 class="intro-lead">Exploring & Promoting Art</h1>
-						<p class="">Read my articles and blog<a href="https://rachelblog.github.io/right-sidebar.html" target="_blank"> in full</a></p>
+						<p class="">Read my articles and blog<a href="https://rachelblog.github.io/Writing.html" target="_blank"> in full</a></p>
 					</div>
 				</div>
 			</div>
