--- a/about.html
+++ b/about.html
@@ -133,6 +133,7 @@
 		<div id="fh5co-services">
 			<div class="container">
 				<div class="row">
+					<div id="pixlee_container"></div><script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'nsyv2PVcKKUzSq8PgA6q'});Pixlee.addSimpleWidget({widgetId:'26986'});};</script><script src="//instafeed.assets.pxlecdn.com/assets/pixlee_widget_1_0_0.js"></script>
 					<div class="col-md-10 col-md-offset-1">
 						<div class="row">
 							<h2 class="section-lead text-center">Features</h2>
