--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,18 @@
 		</nav>
 	</header>
 	<!-- END .header -->
-	
+	<div id="fh5co-main">
+		<div class="fh5co-intro text-center">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-8 col-md-offset-2">
+						<h1 class="intro-lead">Left Sidebar Page</h1>
+						<p class="">100% Free HTML5 Template by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a></p>
+					</div>
+			
+				</div>
+			</div>
+		</div>
 	<div id="pixlee_container"></div><script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'nsyv2PVcKKUzSq8PgA6q'});Pixlee.addSimpleWidget({widgetId:'26986'});};</script><script src="//instafeed.assets.pxlecdn.com/assets/pixlee_widget_1_0_0.js"></script>
 					
 
