--- a/contact.html
+++ b/contact.html
@@ -93,8 +93,10 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
-						<h1 class="intro-lead">Left Sidebar Page</h1>
-						<p class="">100% Free HTML5 Template by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a></p>
+						<h1 class="intro-lead">Contact Information and Links</h1>
+						<p class="">Connect with me on <a href="https://www.linkedin.com/in/rachelowens17/" target="_blank">LinkedIn</a></p>
+						<p class="">Reach out to me by <a href="mailto:rachelcowens@gmail.com" target="_blank">email</a></p>
+						<p class="">Follow my gallery visits on <a href="https://www.linkedin.com/in/rachelowens17/" target="_blank">Instagram</a></p>
 					</div>
 			
 				</div>
@@ -102,7 +104,7 @@
 		</div>
 	<div id="pixlee_container"></div><script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'nsyv2PVcKKUzSq8PgA6q'});Pixlee.addSimpleWidget({widgetId:'26986'});};</script><script src="//instafeed.assets.pxlecdn.com/assets/pixlee_widget_1_0_0.js"></script>
 					
-
+	</div>
 
 	<footer id="fh5co-footer">
 		<div class="container">
