--- a/about.html
+++ b/about.html
@@ -92,8 +92,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
-						<h1 class="intro-lead">Left Sidebar Page</h1>
-						<p class="">100% Free HTML5 Template by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a></p>
+						<h1 class="intro-lead">About me</h1>
+						<p class="">An intro to who I am and what I love to do</p>
 					</div>
 			
 				</div>
@@ -106,8 +106,8 @@
 					<div class="col-md-10 col-md-offset-1">
 						<div class="row">
 							<div class="col-md-3 animate-box">
-								<h3>Paragraph</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+								<h3>Sections</h3>
+								<p>.</p>
 								<ul class="fh5co-list-check">
 									<li>Far far away</li>
 									<li>The word mountains</li>
