--- a/Writing.html
+++ b/Writing.html
@@ -73,13 +73,15 @@
 						<div class="navbar-header"> 
 						<!-- Mobile Toggle Menu Button -->
 						<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle visible-xs-block" data-toggle="collapse" data-target="#fh5co-navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
-						<a class="navbar-brand" href="index.html">Clean</a>
+						<a class="navbar-brand" href="index.html">Rachel Owens</a>
 						</div>
 						<div id="fh5co-navbar" class="navbar-collapse collapse">
 							<ul class="nav navbar-nav navbar-right">
-								<li><a href="index.html"><span>Home <span class="border"></span></span></a></li>
-								<li><a href="right-sidebar.html"><span>Right Sidebar <span class="border"></span></span></a></li>
-								<li class="active"><a href="left-sidebar.html"><span>Left Sidebar <span class="border"></span></span></a></li>
+								<li class="active"><a href="index.html"><span>Home <span class="border"></span></span></a></li>
+								<li><a href="about.html"><span>About <span class="border"></span></span></a></li>
+								<li><a href="contact.html"><span>Contact<span class="border"></span></span></a></li>
+								<li><a href="Writing.html"><span>Writing<span class="border"></span></span></a></li>
+								
 							</ul>
 						</div>
 					</div>
