--- a/contact.html
+++ b/contact.html
@@ -77,9 +77,9 @@
 						</div>
 						<div id="fh5co-navbar" class="navbar-collapse collapse">
 							<ul class="nav navbar-nav navbar-right">
-								<li class="active"><a href="index.html"><span>Home <span class="border"></span></span></a></li>
+								<li><a href="index.html"><span>Home <span class="border"></span></span></a></li>
 								<li><a href="about.html"><span>About <span class="border"></span></span></a></li>
-								<li><a href="contact.html"><span>Contact<span class="border"></span></span></a></li>
+								<li  class="active"><a href="contact.html"><span>Contact<span class="border"></span></span></a></li>
 								<li><a href="Writing.html"><span>Writing<span class="border"></span></span></a></li>
 								
 							</ul>
