--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
 						<h1 class="intro-lead">Exploring & Promoting Art</h1>
-						<p class="">Read my articles and blog<a href="https://rachelblog.github.io/Writing.html" target="_blank"> in full</a></p>
+						<p class="">Read my articles and blog<a href="Writing.html" target="_blank"> in full</a></p>
 					</div>
 				</div>
 			</div>
