--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
 						<h1 class="intro-lead">Contact Information and Links</h1>
 						<p class="">Connect with me on <a href="https://www.linkedin.com/in/rachelowens17/" target="_blank">LinkedIn</a></p>
 						<p class="">Reach out to me by <a href="mailto:rachelcowens@gmail.com" target="_blank">email</a></p>
-						<p class="">Follow my gallery visits on <a href="https://www.linkedin.com/in/rachelowens17/" target="_blank">Instagram</a></p>
+						<p class="">Follow my gallery visits on <a href="https://www.instagram.com/rachelc_owens/" target="_blank">Instagram</a></p>
 					</div>
 			
 				</div>
