--- a/index.html
+++ b/index.html
@@ -106,39 +106,31 @@
 			<div class="fh5co-portfolio-item ">
 				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/work_1.jpg);"></div>
 				<div class="fh5co-portfolio-description">
-					<h2>Project First</h2>
+					<h2>Lee Krasner - Into the Night</h2>
 					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-					<p><a href="#" class="btn btn-primary">Read the casetudy</a></p>
+					<p><a href="article1.html" class="btn btn-primary">Read the Article</a></p>
 				</div>
 			</div>
 			<div class="fh5co-portfolio-item fh5co-img-right">
 				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/work_2.jpg);"></div>
 				<div class="fh5co-portfolio-description">
-					<h2>Project Second</h2>
+					<h2>James Coleman</h2>
 					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-					<p><a href="#" class="btn btn-primary">Read the casetudy</a></p>
+					<p><a href="#" class="btn btn-primary">Read the Article</a></p>
 				</div>
 			</div>
 			<div class="fh5co-portfolio-item ">
 				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/work_3.jpg);"></div>
 				<div class="fh5co-portfolio-description">
-					<h2>Project Third</h2>
+					<h2>IELA 1972</h2>
 					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-					<p><a href="#" class="btn btn-primary">Read the casetudy</a></p>
+					<p><a href="#" class="btn btn-primary">Read the Article</a></p>
 				</div>
 			</div>
 			<div class="fh5co-portfolio-item fh5co-img-right">
 				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/work_4.jpg);"></div>
 				<div class="fh5co-portfolio-description">
-					<h2>Project Fourth</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-					<p><a href="#" class="btn btn-primary">Read the casetudy</a></p>
-				</div>
-			</div>
-			<div class="fh5co-portfolio-item ">
-				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/work_3.jpg);"></div>
-				<div class="fh5co-portfolio-description">
-					<h2>Project Fifth</h2>
+					<h2>Redentore</h2>
 					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
 					<p><a href="#" class="btn btn-primary">Read the casetudy</a></p>
 				</div>
