--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
-						<h1 class="intro-lead">Exploring & Promoting Art</h1>
+						<h1 class="intro-lead">Promoting Accessibility and Interest in Art</h1>
 						<p class="">Read my articles and blog<a href="Writing.html"> in full</a></p>
 					</div>
 				</div>
