--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Rachelblog &mdash; Promoting irish arts</title>
+	<title>Rachelblog &mdash; Promoting Art Accessibility</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Student blog" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
