--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Rachelblog &mdash; Promoting Art Accessibility</title>
+	<title>Rachel Owens &mdash; Promoting Art Accessibility</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Student blog" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
@@ -95,7 +95,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
-						<h1 class="intro-lead">Promoting Accessibility and Interest in Art</h1>
+						<h1 class="intro-lead">Promoting Art Accessibility</h1>
 						<p class="">Read my articles and blog<a href="Writing.html"> in full</a></p>
 					</div>
 				</div>
@@ -106,7 +106,7 @@
 			<div class="fh5co-portfolio-item ">
 				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/work_1.jpg);"></div>
 				<div class="fh5co-portfolio-description">
-					<h2>Lee Krasner - Into the Night</h2>
+					<h2>Picasso</h2>
 					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
 					<p><a href="article1.html" class="btn btn-primary">Read the Article</a></p>
 				</div>
@@ -114,7 +114,7 @@
 			<div class="fh5co-portfolio-item fh5co-img-right">
 				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/work_2.jpg);"></div>
 				<div class="fh5co-portfolio-description">
-					<h2>James Coleman</h2>
+					<h2>Lee Krasner</h2>
 					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
 					<p><a href="#" class="btn btn-primary">Read the Article</a></p>
 				</div>
@@ -122,7 +122,7 @@
 			<div class="fh5co-portfolio-item ">
 				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/work_3.jpg);"></div>
 				<div class="fh5co-portfolio-description">
-					<h2>IELA 1972</h2>
+					<h2>Agnes Martin</h2>
 					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
 					<p><a href="#" class="btn btn-primary">Read the Article</a></p>
 				</div>
@@ -130,13 +130,13 @@
 			<div class="fh5co-portfolio-item fh5co-img-right">
 				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/work_4.jpg);"></div>
 				<div class="fh5co-portfolio-description">
-					<h2>Redentore</h2>
+					<h2>Dublin Kiosk</h2>
 					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
 					<p><a href="#" class="btn btn-primary">Read the casetudy</a></p>
 				</div>
 			</div>
 		</div>
-
+<!--
 		<div id="fh5co-team">
 			<div class="container">
 				<div class="row">
@@ -193,7 +193,7 @@
 				</div>
 			</div>
 		</div>
-
+-->
 		<div id="fh5co-services">
 			<div class="container">
 				<div class="row">
