--- a/about.html
+++ b/about.html
@@ -127,7 +127,7 @@
 								<p class="animate-box">I recently started working as a gallery assistant at Jealous Gallery, a contemporary print gallery based in London. My position is extremely varied ranging from curating and hanging exhibitions, to managing the gallery’s social media account to working at art fairs dealing with buyers. It is really good experience!</p>
 								<p class="animate-box">I created this website to bring together my research, to act as a platform where I can share exhibition reviews, personal projects and publications. I love to research and write about art and would love to be able to share this with those who would enjoy reading it. Please reach out to me if you have any feedback about my writings. </p>
 								<p class="animate-box">I hope you enjoy!</p>
-								<p class="animate-box">Rachel</p>
+								<p class="animate-box">Rachel x</p>
 							</div>
 						</div>
 					</div>
