--- a/contact.html
+++ b/contact.html
@@ -98,14 +98,13 @@
 						<h1 class="intro-lead">Contact Information and Links</h1>
 						<p class="">Connect with me on <a href="https://www.linkedin.com/in/rachelowens17/" target="_blank">LinkedIn</a></p>
 						<p class="">Reach out to me by <a href="mailto:rachelcowens17@gmail.com" target="_blank">email</a></p>
-						<p class="">Follow my gallery visits on <a href="https://www.instagram.com/rachelc_owens/" target="_blank">Instagram</a></p>
+						<p class="">Follow me on <a href="https://www.instagram.com/rachelc_owens/" target="_blank">Instagram</a></p>
 					</div>
 			
 				</div>
 			</div>
 		</div>
-	<div id="pixlee_container"></div><script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'nsyv2PVcKKUzSq8PgA6q'});Pixlee.addSimpleWidget({widgetId:'26986'});};</script><script src="//instafeed.assets.pxlecdn.com/assets/pixlee_widget_1_0_0.js"></script>
-					
+	<div id="pixlee_container"></div><script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'null'});Pixlee.addSimpleWidget({widgetId:'null'});};</script><script src="//instafeed.assets.pxlecdn.com/assets/pixlee_widget_1_0_0.js"></script>				
 	</div>
 
 	<footer id="fh5co-footer">
