--- a/index.html
+++ b/index.html
@@ -104,35 +104,35 @@
 
 		<div id="fh5co-portfolio">
 			<div class="fh5co-portfolio-item ">
-				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/work_1.jpg);"></div>
+				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/picasso.png);"></div>
 				<div class="fh5co-portfolio-description">
 					<h2>Picasso</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-					<p><a href="article1.html" class="btn btn-primary">Read the Article</a></p>
+					<p></p>
+					<p><a href="articles/picasso.html" class="btn btn-primary">Read the Article</a></p>
 				</div>
 			</div>
 			<div class="fh5co-portfolio-item fh5co-img-right">
-				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/work_2.jpg);"></div>
+				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/krasner.png);"></div>
 				<div class="fh5co-portfolio-description">
-					<h2>Lee Krasner</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-					<p><a href="#" class="btn btn-primary">Read the Article</a></p>
+					<h2>Lee Krasner - Emerging from Darkness</h2>
+					<p>Far far away, supplies it with the necessary regelialia.</p>
+					<p><a href="articles/krasner.html" class="btn btn-primary">Read the Article</a></p>
 				</div>
 			</div>
 			<div class="fh5co-portfolio-item ">
-				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/work_3.jpg);"></div>
+				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/martin.png);"></div>
 				<div class="fh5co-portfolio-description">
-					<h2>Agnes Martin</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-					<p><a href="#" class="btn btn-primary">Read the Article</a></p>
+					<h2>Agnes Martin - Collasping Space</h2>
+					<p> large language ocean. A small river named.</p>
+					<p><a href="articles/martin.html" class="btn btn-primary">Read the Article</a></p>
 				</div>
 			</div>
 			<div class="fh5co-portfolio-item fh5co-img-right">
-				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/work_4.jpg);"></div>
+				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/kiosk.png);"></div>
 				<div class="fh5co-portfolio-description">
-					<h2>Dublin Kiosk</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-					<p><a href="#" class="btn btn-primary">Read the casetudy</a></p>
+					<h2>Leeson Street Kiosk, Dublin</h2>
+					<p></p>
+					<p><a href="articles/kiosk.html" class="btn btn-primary">Read the Article</a></p>
 				</div>
 			</div>
 		</div>
@@ -194,6 +194,7 @@
 			</div>
 		</div>
 -->
+		<!--
 		<div id="fh5co-services">
 			<div class="container">
 				<div class="row">
@@ -253,7 +254,7 @@
 		</div>
 
 	</div>
-
+-->
 	<footer id="fh5co-footer">
 		<div class="container">
 			<div class="row">
