--- a/index.html
+++ b/index.html
@@ -106,17 +106,25 @@
 			<div class="fh5co-portfolio-item ">
 				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/picasso.png);"></div>
 				<div class="fh5co-portfolio-description">
-					<h2>Picasso</h2>
-					<p></p>
-					<p><a href="articles/picasso.html" class="btn btn-primary">Read the Article</a></p>
+					<h2>Picasso adn Paper: Exhibition Review</h2>
+					<p>Is it still possible to show Pablo Picasso through a fresh lens? Can an artist be explored in
+relation to paper? A material which is central to all artistic production, can it provide new
+insights into Picasso’s work?</p>
+					<p><a href="picasso.html" class="btn btn-primary">Read the Article</a></p>
 				</div>
 			</div>
 			<div class="fh5co-portfolio-item fh5co-img-right">
 				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/krasner.png);"></div>
 				<div class="fh5co-portfolio-description">
 					<h2>Lee Krasner - Emerging from Darkness</h2>
-					<p>Far far away, supplies it with the necessary regelialia.</p>
-					<p><a href="articles/krasner.html" class="btn btn-primary">Read the Article</a></p>
+					<p>Published on <a href="https://www.thecreativepandemic.com/post/guest-writer-rachel-owens">The Creative Pandemic</a></p>
+					<p>Lee Krasner was one of the most talented, influential artists working during the Twentieth
+Century. She is known to many as Mrs Jackson Pollock, due to her marriage to Abstract
+Expressionist Jackson Pollock, which has consistently overshadowed her artistic
+achievements. Krasner’s legacy is not her work, her being a feminist role model or her
+incredible self-belief as an artist, rather her marriage to Pollock. Let us remember Krasner
+						was painting before Pollock, with Pollock and after Pollock.</p>
+					<p><a href="krasner.html" class="btn btn-primary">Read the Article</a></p>
 				</div>
 			</div>
 			<div class="fh5co-portfolio-item ">
@@ -124,7 +132,7 @@
 				<div class="fh5co-portfolio-description">
 					<h2>Agnes Martin - Collasping Space</h2>
 					<p> large language ocean. A small river named.</p>
-					<p><a href="articles/martin.html" class="btn btn-primary">Read the Article</a></p>
+					<p><a href="martin.html" class="btn btn-primary">Read the Article</a></p>
 				</div>
 			</div>
 			<div class="fh5co-portfolio-item fh5co-img-right">
@@ -132,7 +140,7 @@
 				<div class="fh5co-portfolio-description">
 					<h2>Leeson Street Kiosk, Dublin</h2>
 					<p></p>
-					<p><a href="articles/kiosk.html" class="btn btn-primary">Read the Article</a></p>
+					<p><a href="kiosk.html" class="btn btn-primary">Read the Article</a></p>
 				</div>
 			</div>
 		</div>
