--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			<div class="fh5co-portfolio-item ">
 				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/picasso.png);"></div>
 				<div class="fh5co-portfolio-description">
-					<h2>Picasso adn Paper: Exhibition Review</h2>
+					<h2>Picasso and Paper: Exhibition Review</h2>
 					<p>Is it still possible to show Pablo Picasso through a fresh lens? Can an artist be explored in
 relation to paper? A material which is central to all artistic production, can it provide new
 insights into Picasso’s work?</p>
@@ -116,8 +116,8 @@ insights into Picasso’s work?</p>
 			<div class="fh5co-portfolio-item fh5co-img-right">
 				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/krasner.png);"></div>
 				<div class="fh5co-portfolio-description">
-					<h2>Lee Krasner - Emerging from Darkness</h2>
-					<p>Published on <a href="https://www.thecreativepandemic.com/post/guest-writer-rachel-owens">The Creative Pandemic</a></p>
+					<h2>Lee Krasner: Emerging from Darkness</h2>
+					<p>First published in <a href="https://www.thecreativepandemic.com/post/guest-writer-rachel-owens">The Creative Pandemic</a></p>
 					<p>Lee Krasner was one of the most talented, influential artists working during the Twentieth
 Century. She is known to many as Mrs Jackson Pollock, due to her marriage to Abstract
 Expressionist Jackson Pollock, which has consistently overshadowed her artistic
@@ -131,15 +131,30 @@ incredible self-belief as an artist, rather her marriage to Pollock. Let us reme
 				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/martin.png);"></div>
 				<div class="fh5co-portfolio-description">
 					<h2>Agnes Martin - Collasping Space</h2>
-					<p> large language ocean. A small river named.</p>
+					<p>First published in <a href="https://www.thegallyry.com/post/lose-yourself-in-the-abstract-work-of-agnes-martin">The Gallyry Magazine</a></p>
+					<p>“The function of art work is the stimulation of sensibilities, the renewal of memories of
+moments of perfection.” – Agnes Martin</p>
+					<p>Agnes Martin was a pioneering Abstract artist, known for her distinctly large square
+canvases. Born in 1912 in Macklin, Saskatchewan, Canada, she spent most her life in the US,
+becoming a US Citizen in 1940. Martin moved to New York city in 1957, where she would
+remain until 1967. During this period, she produced the grid paintings that made her
+reputation and led to her inclusion in important Abstract Expressionist exhibitions.</p>
 					<p><a href="martin.html" class="btn btn-primary">Read the Article</a></p>
 				</div>
 			</div>
 			<div class="fh5co-portfolio-item fh5co-img-right">
 				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/kiosk.png);"></div>
 				<div class="fh5co-portfolio-description">
-					<h2>Leeson Street Kiosk, Dublin</h2>
-					<p></p>
+					<h2>A distinct vision of Dublin: The Leeson Street Kiosk</h2>
+					<p>First published in The Society for the Protection of Ancient Buildings Magazine, 2019</p>
+					<p>Dublin has always been known for its architecture, particularly as a Georgian city. One
+building which particularly captures the essence of Dublin is a small local kiosk which stands
+at the junction of Leeson Street and Adelaide Road. The kiosk was designed in 1929 by the
+architect Michael Moynihan, (b. 1874) and built for the Dublin Corporation in 1930 by the
+builder J. P. Price. The building was to house a water pressure station, ladies’ lavatory, kiosk
+and telephone booth.
+The kiosk was built in the Art Deco style, a newly established style of architecture which was
+an outcome of L’Exposition des Arts Décoratifs et Industriels Moderne, held in Paris in 1925.</p>
 					<p><a href="kiosk.html" class="btn btn-primary">Read the Article</a></p>
 				</div>
 			</div>
