--- a/index.html
+++ b/index.html
@@ -149,12 +149,7 @@ reputation and led to her inclusion in important Abstract Expressionist exhibiti
 					<p>First published in The Society for the Protection of Ancient Buildings Magazine, 2019</p>
 					<p>Dublin has always been known for its architecture, particularly as a Georgian city. One
 building which particularly captures the essence of Dublin is a small local kiosk which stands
-at the junction of Leeson Street and Adelaide Road. The kiosk was designed in 1929 by the
-architect Michael Moynihan, (b. 1874) and built for the Dublin Corporation in 1930 by the
-builder J. P. Price. The building was to house a water pressure station, ladies’ lavatory, kiosk
-and telephone booth.
-The kiosk was built in the Art Deco style, a newly established style of architecture which was
-an outcome of L’Exposition des Arts Décoratifs et Industriels Moderne, held in Paris in 1925.</p>
+at the junction of Leeson Street and Adelaide Road.</p>
 					<p><a href="kiosk.html" class="btn btn-primary">Read the Article</a></p>
 				</div>
 			</div>
