--- a/picasso.html
+++ b/picasso.html
@@ -94,8 +94,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
-						<h1 class="intro-lead">Left Sidebar Page</h1>
-						<p class="">100% Free HTML5 Template by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a></p>
+						<h1 class="intro-lead">Picasso and Paper</h1>
+						<p class="">An Exhibition Review</p>
 					</div>
 				</div>
 			</div>
@@ -107,13 +107,13 @@
 					<div class="col-md-10 col-md-offset-1">
 						<div class="row">
 							<div class="col-md-3 animate-box">
-								<h3>Paragraph</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+								<h3>Articles</h3>
+								<p>Click on the following links to navigate to my latest articles</p>
 								<ul class="fh5co-list-check">
-									<li>Far far away</li>
-									<li>The word mountains</li>
-									<li>Far from the countries</li>
-									<li>Bookmarksgrove right</li>
+									<li><a href="krasner.html">Lee Krasner</a></li>
+									<li><a href="picasso.html">Picasso and Paper</a></li>
+									<li><a href="martin.html">Agnes Martin</a></li>
+									<li><a href="kiosk.html">Leeson Street Kiosk</a></li>
 								</ul>
 							</div>
 							<div class="col-md-9">
