--- a/picasso.html
+++ b/picasso.html
@@ -117,28 +117,27 @@
 								</ul>
 							</div>
 							<div class="col-md-9">
-								<p class="animate-box">Is it still possible to show Pablo Picasso through a fresh lens? Can an artist be explored inrelation to paper? A material which is central to all artistic production, can it provide new
-insights into Picasso’s work? Picasso and Paper explores the longstanding relationship between Picasso and his primary material Paper. In order to understand Picasso’s love of paper it is essential to go back to the
-start of his career. Picasso dedicated his life to producing art, desperate to be creative, he would use anything he could get his hands on. His initiative and experimentation as an artist
-was unparalleled during the first half of the Twentieth Century. Picasso and Paper celebrates Picasso’s innovation, by exploring his various artistic styles throughout his career. The exhibition also celebrates Picasso’s knowledge and consistent
-reflection of the history of art. This exhibition references Picasso’s study of Eugéne Delacroix’s Femmes d’Alger dans leur appartement, 1934 and Edouard Manet’s Le Déjeuner
-sur l’herbe, 1963. Exploring Picasso’s work through the medium of paper is a refreshing new angle and
-interesting take. It also gives the Royal Academy an opportunity to exhibit many Picasso
-doodles, letters, paper cut-outs which would not usually be exhibited.
-Picasso and Paper has quite a strong biographical focus, typical for exhibitions centred
-around the work of Picasso. With many artists it is possible for their private life to remain
-private, but this is not possible with Picasso. His professional career as an artist and personal
-life are intertwined. Picasso’s work is deeply personal, as he consistently brings his personal
-life to light in his work, with his muses featuring in many of his works.
-In 1900 Picasso travelled to Paris for the first time, where he was exposed to a range of
-influential artists including Paul Gauguin and Vincent van Gogh. In 1901 Picasso’s close
-friend Carles Casagemas committed suicide which led to the development of his Blue Period.
-Blue expressed the melancholy of his subjects, the poverty and loneliness of people
-struggling to survive on the margins of society. La Vie is seen as a high point of Picasso’s
-Blue Period through his use of colour, enigmatic symbolic allegory and overall sense of
-isolation.</p>
-								<p class="animate-box">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-								<p class="animate-box">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+								<p class="animate-box">Is it still possible to show Pablo Picasso through a fresh lens? Can an artist be explored in relation to paper? A material which is central to all artistic production, can it provide new insights into Picasso’s work? </p>
+								<p class="animate-box">Picasso and Paper explores the longstanding relationship between Picasso and his primary material Paper. In order to understand Picasso’s love of paper it is essential to go back to the start of his career. Picasso dedicated his life to producing art, desperate to be creative, he would use anything he could get his hands on. His initiative and experimentation as an artist was unparalleled during the first half of the Twentieth Century.</p>
+								<p class="animate-box">Picasso and Paper celebrates Picasso’s innovation, by exploring his various artistic styles throughout his career. The exhibition also celebrates Picasso’s knowledge and consistent reflection of the history of art. This exhibition references Picasso’s study of Eugéne Delacroix’s Femmes d’Alger dans leur appartement, 1934 and Edouard Manet’s Le Déjeuner sur l’herbe, 1963.</p>
+								<p class="animate-box">Exploring Picasso’s work through the medium of paper is a refreshing new angle and interesting take. It also gives the Royal Academy an opportunity to exhibit many Picasso doodles, letters, paper cut-outs which would not usually be exhibited.</p>
+								<p class="animate-box">Picasso and Paper has quite a strong biographical focus, typical for exhibitions centred around the work of Picasso. With many artists it is possible for their private life to remain private, but this is not possible with Picasso. His professional career as an artist and personal life are intertwined. Picasso’s work is deeply personal, as he consistently brings his personal life to light in his work, with his muses featuring in many of his works.</p>
+								<p class="animate-box">In 1900 Picasso travelled to Paris for the first time, where he was exposed to a range of influential artists including Paul Gauguin and Vincent van Gogh. In 1901 Picasso’s close friend Carles Casagemas committed suicide which led to the development of his Blue Period. Blue expressed the melancholy of his subjects, the poverty and loneliness of people struggling to survive on the margins of society. La Vie is seen as a high point of Picasso’s Blue Period through his use of colour, enigmatic symbolic allegory and overall sense of isolation. </p>
+								<p class="animate-box"></p>
+								<p class="animate-box">Paper had a central role in the development of Cubism, a revolutionary method of constructing pictorial space. Picasso’s exploration of collage marked a turning point in the history of art. Violin is an example of an early papiers collés, his inventiveness is evident through his experimentation with materials, incorporating paper cut-outs, decorative wallpaper and newspaper.</p>
+								<p class="animate-box"></p>
+								<p class="animate-box"></p>
+								<p class="animate-box"></p>
+								<p class="animate-box"></p>
+								<p class="animate-box"></p>
+								<p class="animate-box"></p>
+								<p class="animate-box"></p>
+								<p class="animate-box"></p>
+								<p class="animate-box"></p>
+								<p class="animate-box"></p>
+								<p class="animate-box"></p>
+								<p class="animate-box"></p>
+								<p class="animate-box"></p>
 							</div>
 						</div>
 					</div>
