--- a/picasso.html
+++ b/picasso.html
@@ -132,7 +132,8 @@
 								
 								<p class="animate-box">Picasso’s Seated Woman is a portrait of Dora Maar, who Picasso was intimately involved with since 1935. Maar played an important role in documenting Picasso’s Guernica. This painting was a commission for the Republic’s pavilion at the Paris World’s Fair of 1937. The subject of the work was the aerial bombing of the Basque city of Guernica on 26 April 1937, when hundreds of innocent civilians perished. Maar photographed the painting through its various stages of development. Picasso painted many portraits of Maar, most famously The Weeping Woman, where Maar is represented as a tortured, anguished woman. Maar was an artist in her own right, and had an great impact on Picasso’s work during their relationship.</p>
 								<p class="animate-box"></p>
-								<p class="animate-box"></p>
+								
+								<p class="animate-box">Picasso was one of the most innovative artists of the Twentieth Century, Picasso had the deepest admiration for the ‘great masters’. From 1954 to 1961 he studied the well-known masterpieces, Eugéne Delacroix’s Femmes d’Alger dans leur appartement, 1934 and Edouard Manet’s Le Déjeuner sur l’herbe, 1963. Picasso did not just copy these works, rather he took inspiration from them, deconstructing their symbolism and reconstructing through a wide range of techniques.</p>
 								<p class="animate-box"></p>
 								<p class="animate-box"></p>
 								<p class="animate-box"></p>
