--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@
 				</div>
 			</div>
 		</div>
-	<div id="pixlee_container"></div><script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'null'});Pixlee.addSimpleWidget({widgetId:'null'});};</script><script src="//instafeed.assets.pxlecdn.com/assets/pixlee_widget_1_0_0.js"></script>				
+	<div id="pixlee_container"></div><script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'9jVI8R0yELhHK14fgpYD'});Pixlee.addSimpleWidget({widgetId:'27898'});};</script><script src="//instafeed.assets.pxlecdn.com/assets/pixlee_widget_1_0_0.js"></script>
 	</div>
 
 	<footer id="fh5co-footer">
