--- a/Writing.html
+++ b/Writing.html
@@ -62,6 +62,21 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
+<SCRIPT>
+function ShowRadioButtonDiv (IdBaseName, NumberOfButtons) {
+    for (x=1;x<=NumberOfButtons;x++) {
+        CheckThisButton = IdBaseName + x;
+        ThisDiv = IdBaseName + x +'Div';
+    if (document.getElementById(CheckThisButton).checked) {
+        document.getElementById(ThisDiv).style.display = "block";
+        }
+    else {
+        document.getElementById(ThisDiv).style.display = "none";
+        }
+    }
+    return false;
+}
+</SCRIPT>
 	</head>
 	<body>
 		
@@ -113,10 +128,16 @@
 								<h3>Paragraph</h3>
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 								<ul class="fh5co-list-check">
-									<li>Far far away</li>
-									<li>The word mountains</li>
-									<li>Far from the countries</li>
-									<li>Bookmarksgrove right</li>
+									<li><label>
+									<INPUT TYPE="radio" NAME="RadioGroupName" ID="GroupName1" ONCLICK="ShowRadioButtonDiv('GroupName', 3)"/>Show section 1<BR>
+										</label></li>
+									<li><label>
+									<INPUT TYPE="radio" NAME="RadioGroupName" ID="GroupName2" ONCLICK="ShowRadioButtonDiv('GroupName', 3)"/>Show section 2<BR>
+									</label></li>
+									<li><label>
+									<INPUT TYPE="radio" NAME="RadioGroupName" ID="GroupName3" ONCLICK="ShowRadioButtonDiv('GroupName', 3)"/>Show section 3<BR>
+									</FORM>
+									</label></li>
 								</ul>
 							</div>
 							<div class="col-md-9">
