--- a/Writing.html
+++ b/Writing.html
@@ -128,16 +128,16 @@ function ShowRadioButtonDiv (IdBaseName, NumberOfButtons) {
 								<h3>Paragraph</h3>
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 								<ul class="fh5co-list-check">
-									<li><label>
+									<label>
 									<INPUT TYPE="radio" NAME="RadioGroupName" ID="GroupName1" ONCLICK="ShowRadioButtonDiv('GroupName', 3)"/>Show section 1<BR>
-										</label></li>
-									<li><label>
+										</label>
+									<label>
 									<INPUT TYPE="radio" NAME="RadioGroupName" ID="GroupName2" ONCLICK="ShowRadioButtonDiv('GroupName', 3)"/>Show section 2<BR>
-									</label></li>
-									<li><label>
+									</label>
+									<label>
 									<INPUT TYPE="radio" NAME="RadioGroupName" ID="GroupName3" ONCLICK="ShowRadioButtonDiv('GroupName', 3)"/>Show section 3<BR>
 									</FORM>
-									</label></li>
+									</label>
 								</ul>
 							</div>
 							<div class="col-md-9">
