--- a/Writing.html
+++ b/Writing.html
@@ -112,8 +112,8 @@ function ShowRadioButtonDiv (IdBaseName, NumberOfButtons) {
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
-						<h1 class="intro-lead">Left Sidebar Page</h1>
-						<p class="">100% Free HTML5 Template by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a></p>
+						<h1 class="intro-lead">Articles & Exhibition Reviews</h1>
+						<p class="">My personal writing</p>
 					</div>
 				</div>
 			</div>
@@ -125,25 +125,31 @@ function ShowRadioButtonDiv (IdBaseName, NumberOfButtons) {
 					<div class="col-md-10 col-md-offset-1">
 						<div class="row">
 							<div class="col-md-3 animate-box">
-								<h3>Paragraph</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+								<h3>List of Works</h3>
+								<p></p>
 								<ul class="fh5co-list-check">
 									<label>
-									<INPUT TYPE="radio" NAME="RadioGroupName" ID="GroupName1" ONCLICK="ShowRadioButtonDiv('GroupName', 3)" checked />Show section 1<BR>
+									<INPUT TYPE="radio" NAME="RadioGroupName" ID="GroupName1" ONCLICK="ShowRadioButtonDiv('GroupName', 3)" checked />Lee Krasner: Emerging from Darkness<BR>
 										</label>
 									<label>
-									<INPUT TYPE="radio" NAME="RadioGroupName" ID="GroupName2" ONCLICK="ShowRadioButtonDiv('GroupName', 3)"/>Show section 2<BR>
+									<INPUT TYPE="radio" NAME="RadioGroupName" ID="GroupName2" ONCLICK="ShowRadioButtonDiv('GroupName', 3)"/>Picasso & Paper: Exhibition Review<BR>
 									</label>
 									<label>
-									<INPUT TYPE="radio" NAME="RadioGroupName" ID="GroupName3" ONCLICK="ShowRadioButtonDiv('GroupName', 3)"/>Show section 3<BR>
-									</FORM>
+									<INPUT TYPE="radio" NAME="RadioGroupName" ID="GroupName3" ONCLICK="ShowRadioButtonDiv('GroupName', 3)"/>Agnes Martin: Collapsing Space<BR>
+									</label>
+									<label>
+									<INPUT TYPE="radio" NAME="RadioGroupName" ID="GroupName4" ONCLICK="ShowRadioButtonDiv('GroupName', 3)"/>A Distinct Vision of Dublin: The Leeson Street Kiosk<BR>
+									
 									</label>
 								</ul>
 							</div>
-							<DIV ID="GroupName1Div" STYLE="display:none;" class="col-md-9">
+							<DIV ID="GroupName1Div" STYLE="display:block;" class="col-md-9">
 								<p class="animate-box">Far far away1, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 							</DIV>
 							<DIV ID="GroupName2Div" STYLE="display:none;" class="col-md-9">
+								<p class="animate-box">Far far away2, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+							</DIV>
+							<DIV ID="GroupName3Div" STYLE="display:none;" class="col-md-9">
 								<p class="animate-box">Far far away2, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 							</DIV>
 						</div>
