--- a/index.html
+++ b/index.html
@@ -101,7 +101,32 @@
 				</div>
 			</div>
 		</div>
+		<div id="fh5co-portfolio">
+			<div class="fh5co-portfolio-item ">
+				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/krasner.png);"></div>
+				<div class="fh5co-portfolio-description">
+					<h2>Lee Krasner: Emerging from Darkness</h2>
+					<p>First published in <a href="https://www.thecreativepandemic.com/post/guest-writer-rachel-owens">The Creative Pandemic</a></p>
+					<p>Lee Krasner was one of the most talented, influential artists working during the Twentieth
+Century. She is known to many as Mrs Jackson Pollock, due to her marriage to Abstract
+Expressionist Jackson Pollock, which has consistently overshadowed her artistic
+achievements. Krasner’s legacy is not her work, her being a feminist role model or her
+incredible self-belief as an artist, rather her marriage to Pollock. Let us remember Krasner
+						was painting before Pollock, with Pollock and after Pollock.</p>
+					<p><a href="krasner.html" class="btn btn-primary">Read the Article</a></p>
+				</div>
 
+			</div>
+			<div class="fh5co-portfolio-item fh5co-img-right">
+				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/picasso.png);"></div>
+				<div class="fh5co-portfolio-description">
+					<h2>Picasso and Paper: Exhibition Review</h2>
+					<p>Is it still possible to show Pablo Picasso through a fresh lens? Can an artist be explored in
+relation to paper? A material which is central to all artistic production, can it provide new
+insights into Picasso’s work?</p>
+					<p><a href="picasso.html" class="btn btn-primary">Read the Article</a></p>
+				</div>
+			</div>
 		<div id="fh5co-portfolio">
 			<div class="fh5co-portfolio-item ">
 				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/krasner.png);"></div>
