--- a/index.html
+++ b/index.html
@@ -103,28 +103,23 @@
 		</div>
 		<div id="fh5co-portfolio">
 			<div class="fh5co-portfolio-item ">
-				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/krasner.png);"></div>
+				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/odundo.png);"></div>
 				<div class="fh5co-portfolio-description">
-					<h2>Lee Krasner: Emerging from Darkness</h2>
-					<p>First published in <a href="https://www.thecreativepandemic.com/post/guest-writer-rachel-owens">The Creative Pandemic</a></p>
-					<p>Lee Krasner was one of the most talented, influential artists working during the Twentieth
-Century. She is known to many as Mrs Jackson Pollock, due to her marriage to Abstract
-Expressionist Jackson Pollock, which has consistently overshadowed her artistic
-achievements. Krasner’s legacy is not her work, her being a feminist role model or her
-incredible self-belief as an artist, rather her marriage to Pollock. Let us remember Krasner
-						was painting before Pollock, with Pollock and after Pollock.</p>
-					<p><a href="krasner.html" class="btn btn-primary">Read the Article</a></p>
+					<h2>Exploring the beauty in Magdalene Odundo’s pottery</h2>
+					<p>First published in <a href="https://www.thegallyry.com/post/exploring-the-beauty-in-magdalene-odundo-s-pottery">The Gallyry Magazine</a></p>
+					<p>Odundo is one of the most talented contemporary ceramic artists working today. I first encountered the work of Odundo at The British Museum’s African gallery while working there as a gallery assistant. The sensual, organic nature of her forms is what first attracted me, and as I examined her forms, I was eager to learn more about them.
+						Odundo was born in 1950 in Nairobi, Kenya, before she moved to Britain in 1971. She originally studied Graphic Design at Cambridge College but then switched to Ceramics at the West Surrey College of Art and Design, and later completed a master’s degree in the subject at the Royal College of Art.</p>
+					<p><a href="odundo.html" class="btn btn-primary">Read the Article</a></p>
 				</div>
 
 			</div>
 			<div class="fh5co-portfolio-item fh5co-img-right">
-				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/picasso.png);"></div>
+				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/coleman.png);"></div>
 				<div class="fh5co-portfolio-description">
-					<h2>Picasso and Paper: Exhibition Review</h2>
-					<p>Is it still possible to show Pablo Picasso through a fresh lens? Can an artist be explored in
-relation to paper? A material which is central to all artistic production, can it provide new
-insights into Picasso’s work?</p>
-					<p><a href="picasso.html" class="btn btn-primary">Read the Article</a></p>
+					<h2>Presence and absence in James Coleman’s Lapsus Exposure</h2>
+					<p>First published in <a href="https://www.arttouchesart.com/presence-and-absence-in-james-coleman-lapsus-exposure">ARTtouchesART</a></p>
+					<p>James Coleman is one of Ireland’s greatest artists. He has achieved international acclaim, having exhibited extensively since the 1970s. According to Krauss, Coleman’s work belongs to a ‘post-medium age’, a period where the traditional media of painting and sculpture were rejected in favour of alternative modes of expression. One only needs to think of Donald Judd’s “Specific Objects’, promoting the new ‘three-dimensional works”, liberating artists from the limitations of being confined to a rectangular canvas of painting, and extending their work into the viewers’ realm of vision.</p>
+					<p><a href="coleman.html" class="btn btn-primary">Read the Article</a></p>
 				</div>
 			</div>
 		<div id="fh5co-portfolio">
